--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <h2>スコアランキング</h2>
 
         <div class="input-group">
-            <label for="name">名前:</label>
+            <label for="name">ニックネーム:</label>
             <input type="text" id="name" name="name">
             
             <label for="score">スコア:</label>
@@ -77,7 +77,7 @@
             <thead>
                 <tr>
                     <th>順位</th>
-                    <th>名前</th>
+                    <th>ニックネーム</th>
                     <th>スコア</th>
                 </tr>
             </thead>
